# clayarg

./: .gitignore  README.md  pyproject.toml
docs/: Spec.md
src/clayarg/: __init__.py  cli.py  framing.py  optimize.py  preview.py  quality.py  scale.py  solve.py
src/swift/: Package.swift
src/swift/Sources/ClayargCapture/: main.swift
web/: package-lock.json  package.json
web/src/pages/: index.astro
